{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 91,
  "lineage": "0aad71c3-14a3-bb85-322e-7fa1b115ad2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621096086784:internet-gateway/igw-0cfbdbfadaa1d3a75",
            "id": "igw-0cfbdbfadaa1d3a75",
            "owner_id": "621096086784",
            "tags": {
              "Name": "babel-billet-igw-dev"
            },
            "tags_all": {
              "Name": "babel-billet-igw-dev"
            },
            "vpc_id": "vpc-04943c555426242cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621096086784:route-table/rtb-0c5bf6033fdbc04a7",
            "id": "rtb-0c5bf6033fdbc04a7",
            "owner_id": "621096086784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cfbdbfadaa1d3a75",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "babel-billet-rt-dev"
            },
            "tags_all": {
              "Name": "babel-billet-rt-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04943c555426242cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4c4c8350d52c163",
            "route_table_id": "rtb-0c5bf6033fdbc04a7",
            "subnet_id": "subnet-0874def1ac7c9e1d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621096086784:security-group/sg-0fea73dbab2662b53",
            "description": "SG para ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fea73dbab2662b53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "babel-billet-sg-dev",
            "name_prefix": "",
            "owner_id": "621096086784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "babel-billet-sg-dev"
            },
            "tags_all": {
              "Name": "babel-billet-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04943c555426242cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621096086784:subnet/subnet-0874def1ac7c9e1d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0874def1ac7c9e1d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621096086784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "babel-billet-subnet-public-dev"
            },
            "tags_all": {
              "Name": "babel-billet-subnet-public-dev"
            },
            "vpc_id": "vpc-04943c555426242cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621096086784:subnet/subnet-0d9405e62cd3615a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9405e62cd3615a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621096086784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "babel-billet-subnet-public-2-dev"
            },
            "tags_all": {
              "Name": "babel-billet-subnet-public-2-dev"
            },
            "vpc_id": "vpc-04943c555426242cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:621096086784:vpc/vpc-04943c555426242cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00f4980e7a217c03f",
            "default_route_table_id": "rtb-0f6f0757341eecab2",
            "default_security_group_id": "sg-02c2cfa7f4e22b784",
            "dhcp_options_id": "dopt-0a354bed7018a6eff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04943c555426242cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f6f0757341eecab2",
            "owner_id": "621096086784",
            "tags": {
              "Name": "babel-billet-vpc-dev"
            },
            "tags_all": {
              "Name": "babel-billet-vpc-dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}